# Management-System

./: CMakeLists.txt
src/: Management.cpp  main.cpp  main.qml  management.h  qml.qrc
src/common/: Settings.h  settings.cpp
src/controller/: DatabaseService.h
src/database/: IDataBase.h  IDataBaseService.h.autosave
src/model/: IDataBase.h  sqlitedb.cpp  sqlitedb.h  user.cpp  user.h  userlistmodel.cpp  userlistmodel.h
src/service/: networkdevicesservice.cpp  networkdevicesservice.h
src/view/: CMakeLists.txt  HorizontalList.qml  MainContent.qml  Products.qml
src/view/components/: A.qml  BottomBar.qml  Cart.qml  Cell.qml  ColumnFlow.qml  Control.qml  ControlBarElement.qml  ControlsBar.qml  CustomeScrollBar.qml  Filler.qml  HorizontalListItem.qml  MainContent.qml  Navigation.qml  OpenGlRenderWindow.qml  SideBar.qml  SideBarElement.qml  SideTabBar.qml  TopBar.qml  TopContent.qml  TopList.qml  TopListItem.qml
src/view/js/: Material-icons.js  Settings.js
